[package]
name = "gateways"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.6.1"
common = { path = "../common" }
futures-util = "0.3.21"
reqwest = "0.11.10"
serde = { version = "^1.0.137", features = ["derive"] }
serde_json = "1.0.81"
slog = "2.7.0"
tokio = { version = "^1.18.2", features = ["full"] }

[lib]
name = "gateways"
path = "lib.rs"
